charts/pocketbase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketbase
  namespace: core
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
    - host: pocketbase.batsworks.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocketbase
                port:
                  number: 8090
  tls:
    - hosts:
        - pocketbase.batsworks.com.br
      secretName: tls-pocketbase
